--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,15 @@
 			<artifactId>hibernate-spatial</artifactId>
 			<version>6.5.3.Final</version> <!-- Correspond à votre version de Hibernate -->
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
